--- a/html/home.html
+++ b/html/home.html
@@ -64,9 +64,9 @@
   <input type="submit" value="十号机" name="options" class = "machine-link" onclick=click()></input>
 </div>
 
-
+<main>
   <div class="map">
-<!--    <main>-->
+
     <div class="chart"></div>
     <div class="map1"></div>
     <div class="map2"></div>
@@ -97,8 +97,9 @@
         </table>
       </div>
     </section>
-<!--</main>-->
+
 </div>
+</main>
 
 <!-- 页面内容 -->
 <div class="content">
